--- a/views/register.html
+++ b/views/register.html
@@ -154,7 +154,7 @@
 
 			    </div>
 					<div>
-						<input type="submit" value="Verzenden" >
+						<input type="submit" value="<% if (typeof lang == 'undefined' || lang == 'en') { %>Send<% } else if (lang == 'nl') { %>Verzenden<% } %>" >
 			    </div>
 			</form>
 		</div>
