--- a/views/login.html
+++ b/views/login.html
@@ -153,7 +153,7 @@
 
 
 						</label>
-						<input type="text" name="username" value="200077318">
+						<input type="text" name="username" value="">
 				</div>
 				<div>
 						<label>
@@ -163,7 +163,7 @@
 									Wachtwoord:
 							<% } %>
 						</label>
-						<input type="text" name="password" value="nonechecked">
+						<input type="text" name="password" value="">
 				</div>
 				<input type="submit" name="button" value="login">
 			</form>
