--- a/views/faq.html
+++ b/views/faq.html
@@ -62,7 +62,7 @@
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
 										<li>
-											<a href="/register">Register</a>
+											<a href="/register">Subscribe</a>
 											<ul>
 												<li><a href="/downloads">Downloads</a></li>
 											</ul>
@@ -82,7 +82,7 @@
 								  <li><a href="/home">Home</a></li>
 										<% if (!username) { %>
 											<li>
-												<a href="/register">Registreer</a>
+												<a href="/register">Abboneer</a>
 												<ul>
 													<li><a href="/downloads">Downloads</a></li>
 												</ul>
