--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
 								<li>
-									<a href="/register">Register</a>
+									<a href="/register">Subscribe</a>
 									<ul>
 										<li><a href="/downloads">Downloads</a></li>
 									</ul>
@@ -86,7 +86,7 @@
 						  <li><a href="/home">Home</a></li>
 								<% if (!username) { %>
 									<li>
-										<a href="/register">Registreer</a>
+										<a href="/register">Abboneer</a>
 										<ul>
 											<li><a href="/downloads">Downloads</a></li>
 										</ul>
