--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -61,7 +61,7 @@
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
-										<li><a href="/register">Register</a></li>
+										<li><a href="/register">Subscribe</a></li>
 									<% } %>
 								  <li><a href="/downloads">Downloads</a></li>
 								  <li><a href="/faq">F.A.Q</a></li>
@@ -69,7 +69,7 @@
 								<% } else if (lang == 'nl') { %>
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
-										<li><a href="/register">Registreer</a></li>
+										<li><a href="/register">Abboneer</a></li>
 									<% } %>
 								  <li><a href="/downloads">Downloads</a></li>
 								  <li><a href="/faq">F.A.Q</a></li>
