--- a/views/login.html
+++ b/views/login.html
@@ -61,46 +61,27 @@
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">News</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Subscribe</a>
-											<ul>
-												<li><a href="/downloads">Downloads</a></li>
-											</ul>
-										</li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
-								  <li>
-										<a href="/about">E-Office</a>
-										<ul>
-											<li><a href="/blog">News</a></li>
-											<li><a href="/faq">F.A.Q</a></li>
-											<li><a href="/terms">Terms & Conditions</a></li>
-										</ul>
-									</li>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Terms & Conditions</a></li>
 								<% } else if (lang == 'nl') { %>
 								  <li><a href="/home">Home</a></li>
-										<% if (!username) { %>
-											<li>
-												<a href="/register">Abboneer</a>
-												<ul>
-													<li><a href="/downloads">Downloads</a></li>
-												</ul>
-											</li>
-										<% } else if (username) { %>
-											<li><a href="/downloads">Downloads</a></li>
-										<% } %>
-								  <li>
-										<a href="/about">E-Office</a>
-										<ul>
-											<li><a href="/blog">Nieuws</a></li>
-											<li><a href="/faq">F.A.Q</a></li>
-											<li><a href="/terms">Algemene voorwaarde</a></li>
-										</ul>
-									</li>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li><a href="/login">Login</a></li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
-
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
@@ -173,8 +154,27 @@
 				<input type="submit" name="button" value="login">
 			</form>
 		</div>
-	</div>
 
+
+
+		<!-- <div class="FORM">
+			<h1>FORM</h1>
+			<form action="#" enctype="multipart/form-data"> -->
+				<label for="fileupload" id="buttonlabel">
+					<span role="button" aria-controls="filename" tabindex="0">
+						upload file
+					</span>
+				</label>
+				<input type="file" id="fileupload">
+				<label for="filename" class="hide">
+					uploaded file
+				</label>
+				<input type="text" id="filename" autocomplete="off" readonly placeholder="no file uploaded">
+			</form>
+		<!-- </div> -->
+
+
+	</div>
 </section>
 
 	<footer class="fluid-container">
@@ -208,6 +208,29 @@ $( document ).ready(function() {
 			input.attr("type", "password");
 		}
 	});
+
+	// trigger upload on space & enter
+	// = standard button functionality
+	$('#buttonlabel span[role=button]').bind('keypress keyup', function(e) {
+	  if(e.which === 32 || e.which === 13){
+	    e.preventDefault();
+	    $('#fileupload').click();
+	  }
+	});
+
+	// return chosen filename to additional input
+	$('#fileupload').change(function(e) {
+	  var filename = $('#fileupload').val().split('\\').pop();
+	  $('#filename').val(filename);
+	  $('#filename').attr('placeholder', filename);
+	  $('#filename').focus();
+	});
+
+
+
+
+
+	//
 });
 </script>
 </body>
