--- a/views/terms.html
+++ b/views/terms.html
@@ -63,46 +63,27 @@
 							<ul>
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 								  <li><a href="/home">Home</a></li>
+									<li><a href="/blog">News</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
 									<% if (!username) { %>
-										<li>
-											<a href="/register">Subscribe</a>
-											<ul>
-												<li><a href="/downloads">Downloads</a></li>
-											</ul>
-										</li>
+										<li><a href="/login">Login</a></li>
 									<% } else if (username) { %>
 										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
-								  <li>
-										<a href="/about">E-Office</a>
-										<ul>
-											<li><a href="/blog">News</a></li>
-											<li><a href="/faq">F.A.Q</a></li>
-											<li><a href="/terms">Terms & Conditions</a></li>
-										</ul>
-									</li>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Terms & Conditions</a></li>
 								<% } else if (lang == 'nl') { %>
 								  <li><a href="/home">Home</a></li>
-										<% if (!username) { %>
-											<li>
-												<a href="/register">Abboneer</a>
-												<ul>
-													<li><a href="/downloads">Downloads</a></li>
-												</ul>
-											</li>
-										<% } else if (username) { %>
-											<li><a href="/downloads">Downloads</a></li>
-										<% } %>
-								  <li>
-										<a href="/about">E-Office</a>
-										<ul>
-											<li><a href="/blog">Nieuws</a></li>
-											<li><a href="/faq">F.A.Q</a></li>
-											<li><a href="/terms">Algemene voorwaarde</a></li>
-										</ul>
-									</li>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<% if (!username) { %>
+										<li><a href="/login">Login</a></li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
+									<% } %>
+								  <li><a href="/about">E-Office</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
 								<% } %>
-
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
